    NX (redistributed).
  * Apply patches for the Debian package as the last patches in the series.
  * Fix faulty patch name suffix (has to be .patch, not .diff).
  * Fix Xinerama support in Debian package libnx-x11 when NX gets built with
    patch 600_nx-X11+nxcompext+nxcompshad_unique-libnames.full.patch. Still on
    the todo list: fix the nx-X11 installation via Makefile.

  [ Jan Engelhardt ]
  * Update patch: 001_add-main-makefile.full+lite.patch, allow passing of
    configure args.
  * Add patch: 030_nx-X11_configure-args.diff. Allow passing of configure args.
  * Add patch: 031_nx-X11_parallel-make.diff, enable parallel make.
  * Add patch: 301_nx-X11_use-shared-libs.full.diff, use shared libraries from
    distribution rather then libs included in source tree.
  * Add patch: 032_nx-X11_no-x11r6-project-root. We must not overlap with any
    existing files, therefore, both /usr/X11R6 and /usr are excluded
    possibilities for ProjectRoot. Use %_libexecdir/somename, since that is
    still allowed by FHS.
  * Add patch 600_nx-X11+nxcompext+nxcompshad_unique-libnames.full.patch, use
    unique library names for nx-X11 based X11 libraries.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 07 Feb 2012 13:48:19 +0100

nx-libs (2:3.5.0.10-0) unstable; urgency=low

  * Add patch: 006_nxcomp_libpng15.full+lite.patch, fix build against
    libpng 1.5.x.
  * Reintroduce patch: 008_nxcomp_sa_restorer.full+lite.patch, now in a
    version found on etersoft.ru, fixes build on ia64 architecture.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 07 Feb 2012 13:43:50 +0100

nx-libs (2:3.5.0.9-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Providing pending patches in source tree.

  [ Oleksandr Shneyder ]
  * Update patch: 202_nx-x11_enable-xinerama.full.patch, disable Xinerama
    extension if NX_XINERAMA_CONF not exists.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 01 Feb 2012 14:39:57 +0100
