@@ -1,3 +1,2 @@
 nx-X11/.build-exports/lib/*                     usr/lib/nx/X11
-nx-X11/lib/Xinerama/libNX_Xinerama.so*          usr/lib/nx/X11/Xinerama
 nx-X11/programs/Xserver/Xext/SecurityPolicy     usr/share/nx
